# hercules

./: .gitattributes  .gitignore  HERCULES_tutorial.ipynb  LICENSE  README.md  example_sequences.fasta  install_hercules.sh  pyproject.toml
hercules/: __init__.py  api.py  cli.py  plots.py
hercules/core/: __init__.py  mutagenesis.py  physchem.py  profiles.py  proteinbert.py  sequences.py
hercules/core/data/: elasticnet.csv
hercules/core/data/chemphys_scales/: Aggregation-Pawar-J-Mol-Biol-2005-350-379.json  Aggregationlow-Ferdandez-Escamilla-Nat-Biotechnol-2004-22-10--1302-6.json  Averagedturnpropensitiesinatransmembranehelix-Monneetal--J-Mol-Biol-1999-293-807-814.json  Averagerelativeprobabilityofhelix-Kanehisa-Tsong-Biopolymers1980-19-1617-1628.json  Averagerelativeprobabilityofinnerbeta-sheet-Kanehisa-Tsong-Biopolymers1980-19-1617-1628.json  Coil-Deleage-Roux-ProteinEngineering1987-1-289-294.json  DisProt-DunkerAK-ProteinPeptLett-2008-15-9--956.json  Energytransferfromouttoin-95_buried--Radzicka-Wolfenden-Biochemistry1988-27-1664-1670.json  Hydrophobicity-Abraham_Leo-Proteins-Structure-FunctionandGenetics1987-2-130-152.json  Hydrophobicity-Black-Anal-Biochem-1991-193-72-82.json  Hydrophobicity-Janin-Nature1979-277-491-492.json  fg.json  (+24 more)
hercules/models/: __init__.py  fusion.py  fusion_nn.py  loaders.py
hercules/models/weights/: .gitattributes  fusion_nn.pt  proteinbert_weights.pkl
src/hercules/: __init__.py  api.py  attention.py  model.py  physchem.py  profiles.py  uniprot.py
tests/: test_api.py  test_basic.py  test_cli.py  test_core.py  test_models.py
(+44 files in other folders)
