[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hercules-rbp"
version = "0.1.0"
description = "Residue-level RNA-binding propensity prediction"
authors = [{name="Jonathan Fiorentino"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "joblib",
    "tensorflow",
    "requests"
]

#[tool.setuptools]
#package-dir = {"" = "src"}

[tool.setuptools.package-data]
hercules = ["core/data/**"]
"hercules.models.weights" = ["*.pt","*.pkl", "*.joblib", "*.npy", "*.json"]
